RESOLVED FIXED92752
Regression(r124135): SVG tests crashing on ports using Cairo
https://bugs.webkit.org/show_bug.cgi?id=92752
Summary Regression(r124135): SVG tests crashing on ports using Cairo
Thiago Marcos P. Santos
Reported 2012-07-31 07:34:00 PDT
crash log for WebProcess (pid <unknown>): STDOUT: <empty> STDERR: ERR<13595>: /opt/tmpsantos/projects/webkit-efl/Source/WebCore/platform/efl/RenderThemeEfl.cpp:452 createEdje() Could not load 'webkit/base' from theme /usr/local/share/ewebkit-0/themes/default.edj: No Error STDERR: 1 0xb3b148a0 STDERR: 2 0xb6d23298 STDERR: 3 0xb72d9c86 WTF::RefPtr<_cairo>::get() const STDERR: 4 0xb3a6c9bb WebCore::CairoPath::context() STDERR: 5 0xb3a743a5 WebCore::Path::operator=(WebCore::Path const&) STDERR: 6 0xb3431dfa WebCore::SVGAnimateMotionElement::parseAttribute(WebCore::Attribute const&) STDERR: 7 0xb2c5c432 WebCore::StyledElement::attributeChanged(WebCore::Attribute const&) STDERR: 8 0xb345899d WebCore::SVGElement::attributeChanged(WebCore::Attribute const&) STDERR: 9 0xb2bd3ff9 WebCore::Element::parserSetAttributes(WTF::Vector<WebCore::Attribute, 0u> const&, WebCore::FragmentScriptingPermission) STDERR: 10 0xb35839b3 WebCore::XMLDocumentParser::startElementNs(unsigned char const*, unsigned char const*, unsigned char const*, int, unsigned char const**, int, int, unsigned char const**) STDERR: 11 0xb3584ad5 STDERR: 12 0xb05d0d19 STDERR: 13 0xb05da360 STDERR: 14 0xb05db825 xmlParseChunk STDERR: 15 0xb3582f22 WebCore::XMLDocumentParser::doWrite(WTF::String const&) STDERR: 16 0xb3580843 WebCore::XMLDocumentParser::append(WebCore::SegmentedString const&) STDERR: 17 0xb2b6eadd WebCore::DecodedDataDocumentParser::appendBytes(WebCore::DocumentWriter*, char const*, unsigned int) STDERR: 18 0xb2f5ab40 WebCore::DocumentWriter::addData(char const*, unsigned int) STDERR: 19 0xb2f4bc6e WebCore::DocumentLoader::commitData(char const*, unsigned int) STDERR: 20 0xb740452b WebKit::WebFrameLoaderClient::committedLoad(WebCore::DocumentLoader*, char const*, int) STDERR: 21 0xb2f4ba9b WebCore::DocumentLoader::commitLoad(char const*, int) STDERR: 22 0xb2f4be80 WebCore::DocumentLoader::receivedData(char const*, int) STDERR: 23 0xb2f80382 WebCore::MainResourceLoader::addData(char const*, int, bool) STDERR: 24 0xb2f92ad1 WebCore::ResourceLoader::didReceiveData(char const*, int, long long, bool) STDERR: 25 0xb2f816f8 WebCore::MainResourceLoader::didReceiveData(char const*, int, long long, bool) STDERR: 26 0xb2f9338f WebCore::ResourceLoader::didReceiveData(WebCore::ResourceHandle*, char const*, int, int) STDERR: 27 0xb3a649a2 STDERR: 28 0xb68b4e28 STDERR: 29 0xb68cbde0 g_simple_async_result_complete STDERR: 30 0xb68cbe53 STDERR: 31 0xb672f740 STDERR: LEAK: 1 WebPage STDERR: LEAK: 2 WebFrame STDERR: LEAK: 2 JSLazyEventListener STDERR: LEAK: 40 RenderObject STDERR: LEAK: 1 Page STDERR: LEAK: 2 Frame STDERR: LEAK: 4 CachedResource STDERR: LEAK: 107 WebCoreNode
Attachments
Patch (1.69 KB, patch)
2012-07-31 08:14 PDT, Thiago Marcos P. Santos
no flags
Thiago Marcos P. Santos
Comment 1 2012-07-31 08:14:00 PDT
WebKit Review Bot
Comment 2 2012-07-31 09:09:13 PDT
Comment on attachment 155543 [details] Patch Clearing flags on attachment: 155543 Committed r124212: <http://trac.webkit.org/changeset/124212>
WebKit Review Bot
Comment 3 2012-07-31 09:09:17 PDT
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 4 2012-07-31 11:24:33 PDT
Comment on attachment 155543 [details] Patch Thanks for fixing.
Note You need to log in before you can comment on or make changes to this bug.