Regression(r124135): SVG tests crashing on ports using Cairo https://bugs.webkit.org/show_bug.cgi?id=92752

Patch by Thiago Marcos P. Santos <thiago.santos@intel.com> on 2012-07-31
Reviewed by Martin Robinson.

* platform/graphics/cairo/PathCairo.cpp:
(WebCore::Path::operator=):

Canonical link: https://commits.webkit.org/110587@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124212 268f45cc-cd09-0410-ab3c-d52691b4dbfc